--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -8,12 +8,16 @@ html.no-js
   head
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
-    title
+    title BONFIRE
     meta(name="description", content="")
     meta(name="viewport", content="width=device-width")
     // Place favicon.ico and apple-touch-icon.png in the root directory
-    
-    // build:css(.tmp) styles/main.css 
+    script(type="text/javascript", src="//use.typekit.net/vzw7rfm.js")
+    script(type="text/javascript").
+      try{Typekit.load();}catch(e){}
+
+    // build:css(.tmp) styles/main.css
+    link(rel="stylesheet", href="styles/fonts.css")
     link(rel="stylesheet", href="styles/main.css")
     // endbuild
     //- build:head
@@ -26,8 +30,7 @@ html.no-js
       <script src="bower_components/json3/lib/json3.min.js"></script>
       <![endif]
 
-    // Add your site or application content here
-    div(class="container", ng-view)
+    block chat
 
     // Google Analytics: change UA-XXXXX-X to be your site's ID.
     script.
@@ -36,13 +39,23 @@ html.no-js
       g.src='//www.google-analytics.com/ga.js';
       s.parentNode.insertBefore(g,s)}(document,'script'));
 
-
     script(src="bower_components/jquery/jquery.js")
     script(src="bower_components/angular/angular.js")
+    script(src="bower_components/angular-animate/angular-animate.js")
 
-    
-    // build:js({.tmp,app}) scripts/scripts.js 
+    // build:js({.tmp,app}) scripts/scripts.js
     script(src="scripts/app.js")
-    script(src="scripts/controllers/main.js")
+    script(src="scripts/services/vline.js")
+    script(src="scripts/services/video_chat.js")
+    script(src="scripts/services/chat_queue.js")
+    script(src="scripts/services/facebook.js")
+    script(src="scripts/services/auth.js")
+    script(src="scripts/directives/video_stream.js")
+    script(src="scripts/directives/scroll_to_bottom_when_changed.js")
+    script(src="scripts/directives/msg_textarea.js")
+    script(src="scripts/directives/on.js")
+    script(src="scripts/directives/front_door.js")
+    script(src="scripts/controllers/chat.js")
+    script(src="scripts/vendor/vline.js")
     // endbuild
     //- build:body
