--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -1,4 +1,4 @@
-!!!
+doctype
 // [if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]
 // [if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]
 // [if IE 8]>         <html class="no-js lt-ie9"> <![endif]
@@ -17,7 +17,6 @@ html.no-js
       try{Typekit.load();}catch(e){}
 
     // build:css(.tmp) styles/main.css
-    link(rel="stylesheet", href="styles/fonts.css")
     link(rel="stylesheet", href="styles/main.css")
     // endbuild
     //- build:head
