Make express not serve views

--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -29,7 +29,7 @@ html.no-js
       <script src="bower_components/json3/lib/json3.min.js"></script>
       <![endif]
 
-    block chat
+    include chat
 
     // Google Analytics: change UA-XXXXX-X to be your site's ID.
     script.
