--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -42,7 +42,7 @@ html.no-js
     script(src="bower_components/angular/angular.js")
     script(src="bower_components/angular-animate/angular-animate.js")
 
-    // build:js({.tmp,app}) scripts/scripts.js
+    // build:js(app) scripts/scripts.js
     script(src="scripts/app.js")
     script(src="scripts/services/vline.js")
     script(src="scripts/services/video_chat.js")
