Use CDN for vline.js

--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -15,6 +15,7 @@ html.no-js
     script(type="text/javascript", src="//use.typekit.net/vzw7rfm.js")
     script(type="text/javascript").
       try{Typekit.load();}catch(e){}
+    script(src="https://static.vline.com/vline.js")
 
     // build:css(.tmp) styles/main.css
     link(rel="stylesheet", href="styles/main.css")
@@ -55,6 +56,5 @@ html.no-js
     script(src="scripts/directives/on.js")
     script(src="scripts/directives/front_door.js")
     script(src="scripts/controllers/chat.js")
-    script(src="scripts/vendor/vline.js")
     // endbuild
     //- build:body
