Fix broken UI at smaller window widths

--- a/app/jade/chat.jade
+++ b/app/jade/chat.jade
@@ -6,9 +6,9 @@
 
 main(ng-controller="ChatCtrl", onbeforeunload="onbeforeunload", onblur="onblur", onfocus="onfocus")
 
-  #videos.container.large-12.left
-    #btns-and-local-stream.large-24
-      #brand-and-btns.large-11.left
+  #videos.container.large-12.medium-12.small-12.left
+    #btns-and-local-stream.large-24.medium-24.small-24
+      #brand-and-btns.large-11.medium-11.small-11.left
         #brand-container
           #brand
             .brand-side
@@ -38,11 +38,11 @@ main(ng-controller="ChatCtrl", onbeforeunload="onbeforeunload", onblur="onblur",
               .btn#second-chat-btn.half
                 button(ng-click='videoChat.hangUp()', ng-disabled='!videoChat.isChatting') Next
 
-      video-stream(stream="videoChat.streams.local", class="large-13 right")
+      video-stream(stream="videoChat.streams.local", class="large-13 medium-13 small-13 right")
 
     video-stream(stream="videoChat.streams.remote")
 
-  #chat.container.large-12.right
+  #chat.container.large-12.medium-12.small-12.right
     #msgs(scroll-to-bottom-when-changed="videoChat.msgs")
       .msg(ng-repeat="msg in videoChat.msgs", ng-class="{new-msger: videoChat.changeInMsger($index)}")
         .msg-info(ng-if="videoChat.changeInMsger($index)")
