--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -271,18 +271,7 @@ video {
 }
 
 #landing-page {
-  position: absolute;
-  left: calc(50% + 12px);
-  right: 0;
-  top: 0;
-  bottom: 0;
-  background-color: #222;
-  padding-left: 24px;
-  padding-top: 36px;
-  z-index: 1;
-  h1, h2 {
-    color: white;
-  }
+  padding: 24px 30px;
   h1 {
     margin-top: 0px;
     font-size: 41px;
