--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -54,6 +54,7 @@ html.no-js
     script(src="scripts/directives/scroll_to_bottom_when_changed.js")
     script(src="scripts/directives/msg_textarea.js")
     script(src="scripts/directives/on.js")
+    script(src="scripts/directives/delete_when.js")
     script(src="scripts/directives/front_door.js")
     script(src="scripts/controllers/chat.js")
     // endbuild
