--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -273,30 +273,44 @@ video {
 #landing-page {
   padding: 24px 30px;
   h1 {
-    margin-top: 8px;
+    margin-top: 10px;
     font-size: 41px;
     line-height: 48px;
+    margin-bottom: 26px;
   }
   h2 {
-    margin-top: 35px;
+    margin-top: 34px;
     font-size: 24px;
     line-height: 36px;
     margin-bottom: 0;
     font-weight: 500;
   }
+  #fb-login {
+    margin-top: 85px;
+    background-color: #37569a;
+    width: intrinsic;
+    color: white;
+    padding: 15px;
+    padding-top: 7px;
+    padding-bottom: 10px;
+    cursor: pointer;
+  }
+}
+
+#chat-border {
+  height: 100%;
+  width: 100%;
+  background-color: white;
+  border: 3px solid $dark-color;
 }
 
 #msgs {
-  background-color: white;
   overflow-y: scroll;
   height: calc(100% - 75px);
-  border: 3px solid $dark-color;
-  border-bottom: none;
 }
 
 #send-msg-form {
-  border: 3px solid $dark-color;
-  background-color: white;
+  border-top: 3px solid $dark-color;
   width: 100%;
   height: 75px;
 }
