Add social media fonts

--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -18,6 +18,7 @@ html.no-js
     script(src="https://static.vline.com/vline.js")
 
     // build:css(.tmp) styles/main.css
+    link(rel="stylesheet", href="styles/fonts.css")
     link(rel="stylesheet", href="styles/main.css")
     // endbuild
     //- build:head
