--- a/app/jade/chat.jade
+++ b/app/jade/chat.jade
@@ -47,7 +47,7 @@ main(ng-controller="ChatCtrl", onbeforeunload="onbeforeunload", onblur="onblur",
       #msgs(scroll-to-bottom-when-changed="videoChat.msgs")
         #landing-page(ng-hide="auth.isLoggedIn")
           h1 Chat with a person halfway around the world into the wee hours of the morning.
-          h2 Sign in with Facebook, turn on<br>your camera and microphone,<br>and meet new people!
+          h2 Sign in with Facebook, turn on<br>your webcam and microphone,<br>and meet new people!
             #fb-login(ng-click="auth.login()")
               img#fb-login-icon(src="images/fb-icon.png")
               span Sign in with Facebook
