--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -316,6 +316,17 @@ video {
   }
 }
 
+#landing-page.ng-hide-add, #landing-page.ng-hide-remove {
+  transition: 0.6s linear;
+
+  display: block !important;
+  opacity: 1;
+}
+
+#landing-page.ng-hide {
+  opacity: 0;
+}
+
 #chat-border {
   height: 100%;
   width: 100%;
@@ -332,6 +343,18 @@ video {
   border-top: 3px solid $dark-color;
   width: 100%;
   height: 75px;
+  position: relative;
+}
+
+#send-msg-form.ng-hide-add, #send-msg-form.ng-hide-remove {
+  transition: 0.8s ease-out;
+
+  display: block !important;
+  top: 0px;
+}
+
+#send-msg-form.ng-hide {
+  top: 75px;
 }
 
 #send-msg-form textarea {
