Add my animation

--- a/app/jade/chat.jade
+++ b/app/jade/chat.jade
@@ -38,7 +38,20 @@ main(ng-controller="ChatCtrl", onbeforeunload="onbeforeunload", onblur="onblur",
 
       video-stream(stream="videoChat.streams.local", class="large-13 medium-13 small-13 right")
 
-    video-stream(stream="videoChat.streams.remote")
+    video-stream(stream="videoChat.streams.remote", class="relative")
+      #waiting-animation-wrapper(ng-if="videoChat.isAvailable")
+        #waiting-animation
+          .waiting-animation-block
+          .waiting-animation-block
+          .waiting-animation-block
+          .waiting-animation-block
+          .waiting-animation-block
+          .waiting-animation-block
+          .waiting-animation-block
+          .waiting-animation-block
+          .waiting-animation-block
+          .waiting-animation-block
+          .waiting-animation-block
 
   #chat.container.large-12.medium-12.small-12.right
     #chat-border
