--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -424,109 +424,55 @@ video {
   text-indent: -13px;
 }
 
-#waiting-animation-wrapper {
-  width: 200px;
-  height: 20px;
-  position: absolute;
-  top: 66%;
-  left: 50%;
-}
-
-#waiting-animation {
-  height: 100%;
-  width: 100%;
-  position: relative;
-  left: -50%;
-  top: -50%;
+.spinner {
+  margin: 100px auto;
+  width: 50px;
+  height: 30px;
   text-align: center;
-  overflow: hidden;
-  // margin: 0 auto;
+  font-size: 10px;
 }
 
-.waiting-animation-block {
+.spinner > div {
+  background-color: #333;
   height: 100%;
-  width: 14px;
-  margin: 0 1px;
-  background-color: #222;
+  width: 6px;
   display: inline-block;
-  position: relative;
-  visibility: hidden;
-  animation: slide 6s ease infinite;
-  animation-fill-mode: both;
+
+  -webkit-animation: stretchdelay 1.2s infinite ease-in-out;
+  animation: stretchdelay 1.2s infinite ease-in-out;
 }
 
-@keyframes slide {
-  0% {
-    left: 100%;
-    visibility: visible;
+.spinner .rect2 {
+  -webkit-animation-delay: -1.1s;
+  animation-delay: -1.1s;
+}
+
+.spinner .rect3 {
+  -webkit-animation-delay: -1.0s;
+  animation-delay: -1.0s;
+}
+
+.spinner .rect4 {
+  -webkit-animation-delay: -0.9s;
+  animation-delay: -0.9s;
+}
+
+.spinner .rect5 {
+  -webkit-animation-delay: -0.8s;
+  animation-delay: -0.8s;
+}
+
+@-webkit-keyframes stretchdelay {
+  0%, 40%, 100% { -webkit-transform: scaleY(0.4) }
+  20% { -webkit-transform: scaleY(1.0) }
+}
+
+@keyframes stretchdelay {
+  0%, 40%, 100% {
+    transform: scaleY(0.4);
+    -webkit-transform: scaleY(0.4);
+  }  20% {
+    transform: scaleY(1.0);
+    -webkit-transform: scaleY(1.0);
   }
-
-  // 4% {
-  //   background-color: #fff;
-  // }
-
-  21% {
-    left: 0%;
-    width: 8px;
-  }
-
-  51% {
-    left: 0%;
-    width: 8px;
-  }
-
-  // 68% {
-  //   background-color: #fff;
-  // }
-
-  72% {
-    left: -100%;
-  }
-
-  100% {
-    left: -100%;
-  }
-}
-
-.waiting-animation-block:nth-child(1) {
-  animation-delay: .0s;
-}
-.waiting-animation-block:nth-child(2) {
-  animation-delay: .1s;
-}
-.waiting-animation-block:nth-child(3) {
-  animation-delay: .2s;
-}
-.waiting-animation-block:nth-child(4) {
-  animation-delay: .3s;
-}
-.waiting-animation-block:nth-child(5) {
-  animation-delay: .4s;
-}
-.waiting-animation-block:nth-child(6) {
-  animation-delay: .5s;
-}
-.waiting-animation-block:nth-child(7) {
-  animation-delay: .6s;
-}
-.waiting-animation-block:nth-child(8) {
-  animation-delay: .7s;
-}
-.waiting-animation-block:nth-child(9) {
-  animation-delay: .8s;
-}
-.waiting-animation-block:nth-child(10) {
-  animation-delay: .9s;
-}
-.waiting-animation-block:nth-child(11) {
-  animation-delay: 1.0s;
-}
-.waiting-animation-block:nth-child(12) {
-  animation-delay: 1.1s;
-}
-.waiting-animation-block:nth-child(13) {
-  animation-delay: 1.2s;
-}
-.waiting-animation-block:nth-child(14) {
-  animation-delay: 1.3s;
 }
