--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -425,54 +425,35 @@ video {
 }
 
 .spinner {
-  margin: 100px auto;
-  width: 50px;
-  height: 30px;
+  margin: 160px auto 0;
+  width: 116px;
   text-align: center;
-  font-size: 10px;
 }
 
 .spinner > div {
-  background-color: #333;
-  height: 100%;
-  width: 6px;
+  width: 14px;
+  height: 14px;
+  margin: 0 10px;
+  background-color: #aaa;
+
   display: inline-block;
-
-  -webkit-animation: stretchdelay 1.2s infinite ease-in-out;
-  animation: stretchdelay 1.2s infinite ease-in-out;
+  animation: bouncedelay 1.4s infinite ease;
+  /* Prevent first frame from flickering when animation starts */
+  animation-fill-mode: both;
 }
 
-.spinner .rect2 {
-  -webkit-animation-delay: -1.1s;
-  animation-delay: -1.1s;
+.spinner .bounce2 {
+  animation-delay: 0.3s;
 }
 
-.spinner .rect3 {
-  -webkit-animation-delay: -1.0s;
-  animation-delay: -1.0s;
+.spinner .bounce3 {
+  animation-delay: 0.6s;
 }
 
-.spinner .rect4 {
-  -webkit-animation-delay: -0.9s;
-  animation-delay: -0.9s;
-}
-
-.spinner .rect5 {
-  -webkit-animation-delay: -0.8s;
-  animation-delay: -0.8s;
-}
-
-@-webkit-keyframes stretchdelay {
-  0%, 40%, 100% { -webkit-transform: scaleY(0.4) }
-  20% { -webkit-transform: scaleY(1.0) }
-}
-
-@keyframes stretchdelay {
-  0%, 40%, 100% {
-    transform: scaleY(0.4);
-    -webkit-transform: scaleY(0.4);
-  }  20% {
-    transform: scaleY(1.0);
-    -webkit-transform: scaleY(1.0);
+@keyframes bouncedelay {
+  0%, 80%, 100% {
+    transform: scale(0.0);
+  } 40% {
+    transform: scale(1.0);
   }
 }
