--- a/app/jade/chat.jade
+++ b/app/jade/chat.jade
@@ -48,7 +48,7 @@ main(ng-controller="ChatCtrl", onbeforeunload="onbeforeunload", onblur="onblur",
     #chat-border
       #msgs(scroll-to-bottom-when-changed="videoChat.msgs")
         #landing-page(ng-hide="auth.isLoggedIn")
-          h1 Chat with a person halfway around the world into the wee hours of the morning.
+          h1 Chat with a random person halfway around the world into the wee hours of the morning.
           h2 Sign in with Facebook, turn on<br>your webcam and microphone,<br>and meet new people!
             #fb-login-container(ng-click="auth.login()")
               #fb-login
