Remove extraneous white shadows imgs

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -403,7 +403,7 @@ video {
   left: 0;
   height: 100%;
   width: 100%;
-  background-image: url('/images/white_shadows_3.png');
+  background-image: url('/images/white_shadows.png');
   background-size: contain;
   background-repeat: no-repeat;
   opacity: 0.4;
