--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -56,14 +56,6 @@ a {
   padding: 10px 20px 8px 20px;
   font-size: 15px;
   text-transform: uppercase;
-  background: rgb(20,33,86); /* Old browsers */
-  background: -moz-linear-gradient(left,  rgba(20,33,86,1) 0%, rgba(32,49,118,1) 17%, rgba(69,79,166,1) 27%, rgba(119,115,202,1) 37%, rgba(157,137,219,1) 49%, rgba(216,173,226,1) 59%, rgba(252,209,201,1) 77%, rgba(254,201,180,1) 89%, rgba(254,162,107,1) 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(20,33,86,1)), color-stop(17%,rgba(32,49,118,1)), color-stop(27%,rgba(69,79,166,1)), color-stop(37%,rgba(119,115,202,1)), color-stop(49%,rgba(157,137,219,1)), color-stop(59%,rgba(216,173,226,1)), color-stop(77%,rgba(252,209,201,1)), color-stop(89%,rgba(254,201,180,1)), color-stop(100%,rgba(254,162,107,1))); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(left,  rgba(20,33,86,1) 0%,rgba(32,49,118,1) 17%,rgba(69,79,166,1) 27%,rgba(119,115,202,1) 37%,rgba(157,137,219,1) 49%,rgba(216,173,226,1) 59%,rgba(252,209,201,1) 77%,rgba(254,201,180,1) 89%,rgba(254,162,107,1) 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(left,  rgba(20,33,86,1) 0%,rgba(32,49,118,1) 17%,rgba(69,79,166,1) 27%,rgba(119,115,202,1) 37%,rgba(157,137,219,1) 49%,rgba(216,173,226,1) 59%,rgba(252,209,201,1) 77%,rgba(254,201,180,1) 89%,rgba(254,162,107,1) 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(left,  rgba(20,33,86,1) 0%,rgba(32,49,118,1) 17%,rgba(69,79,166,1) 27%,rgba(119,115,202,1) 37%,rgba(157,137,219,1) 49%,rgba(216,173,226,1) 59%,rgba(252,209,201,1) 77%,rgba(254,201,180,1) 89%,rgba(254,162,107,1) 100%); /* IE10+ */
-  background: linear-gradient(to right,  rgba(20,33,86,1) 0%,rgba(32,49,118,1) 17%,rgba(69,79,166,1) 27%,rgba(119,115,202,1) 37%,rgba(157,137,219,1) 49%,rgba(216,173,226,1) 59%,rgba(252,209,201,1) 77%,rgba(254,201,180,1) 89%,rgba(254,162,107,1) 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#142156', endColorstr='#fea26b',GradientType=1 ); /* IE6-9 */
 }
 
 textarea {
@@ -219,6 +211,7 @@ video {
   height: 100%;
   border: none;
   padding: 0;
+  position: relative;
   button {
     height: 100%;
     width: 100%;
@@ -227,30 +220,48 @@ video {
     font-family: "europa";
     font-size: 17px;
     color: $dark-color;
+    position: relative;
+    z-index: 2;
     &:disabled {
       color: #aaa;
       cursor: default;
     }
-    // &.pulse {
-    //   background-color: #35549c;
-    //   color: white;
-    //   transition: 3s all ease;
-    // }
+    &.pulse {
+      color: white;
+    }
+    &.pulse-add {
+      transition: 1.5s all ease;
+      transition-delay: .5s;
+    }
   }
 }
 
-// @keyframes pulse {
-//   0% {
-//     background-color: #fff;
-//   }
-
-//   50% {
-//   }
-
-//   100% {
-//     background-color: #fff;
-//   }
-// }
+#chat-btns .btn .gradient {
+  background: rgb(20,33,86); /* Old browsers */
+  background: -moz-linear-gradient(left,  rgba(20,33,86,1) 0%, rgba(32,49,118,1) 17%, rgba(69,79,166,1) 27%, rgba(119,115,202,1) 37%, rgba(157,137,219,1) 49%, rgba(216,173,226,1) 59%, rgba(252,209,201,1) 77%, rgba(254,201,180,1) 89%, rgba(254,162,107,1) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(20,33,86,1)), color-stop(17%,rgba(32,49,118,1)), color-stop(27%,rgba(69,79,166,1)), color-stop(37%,rgba(119,115,202,1)), color-stop(49%,rgba(157,137,219,1)), color-stop(59%,rgba(216,173,226,1)), color-stop(77%,rgba(252,209,201,1)), color-stop(89%,rgba(254,201,180,1)), color-stop(100%,rgba(254,162,107,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(left,  rgba(20,33,86,1) 0%,rgba(32,49,118,1) 17%,rgba(69,79,166,1) 27%,rgba(119,115,202,1) 37%,rgba(157,137,219,1) 49%,rgba(216,173,226,1) 59%,rgba(252,209,201,1) 77%,rgba(254,201,180,1) 89%,rgba(254,162,107,1) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(left,  rgba(20,33,86,1) 0%,rgba(32,49,118,1) 17%,rgba(69,79,166,1) 27%,rgba(119,115,202,1) 37%,rgba(157,137,219,1) 49%,rgba(216,173,226,1) 59%,rgba(252,209,201,1) 77%,rgba(254,201,180,1) 89%,rgba(254,162,107,1) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(left,  rgba(20,33,86,1) 0%,rgba(32,49,118,1) 17%,rgba(69,79,166,1) 27%,rgba(119,115,202,1) 37%,rgba(157,137,219,1) 49%,rgba(216,173,226,1) 59%,rgba(252,209,201,1) 77%,rgba(254,201,180,1) 89%,rgba(254,162,107,1) 100%); /* IE10+ */
+  background: linear-gradient(to right,  rgba(20,33,86,1) 0%,rgba(32,49,118,1) 17%,rgba(69,79,166,1) 27%,rgba(119,115,202,1) 37%,rgba(157,137,219,1) 49%,rgba(216,173,226,1) 59%,rgba(252,209,201,1) 77%,rgba(254,201,180,1) 89%,rgba(254,162,107,1) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#142156', endColorstr='#fea26b',GradientType=1 ); /* IE6-9 */
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  &.pulse {
+    opacity: 1;
+  }
+  &.pulse-add {
+    transition: 1.5s opacity ease;
+    transition-delay: .5s;
+  }
+  &.pulse-remove {
+    transition: 0.5s linear;
+  }
+}
 
 #chat-btns .btn.half {
   position: relative;
@@ -304,6 +315,9 @@ video {
   padding: 24px 30px;
   height: 100%;
   width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
   color: white;
   h1 {
     margin-top: 10px;
@@ -376,6 +390,7 @@ video {
   height: 100%;
   width: 100%;
   position: relative;
+  overflow: hidden;
   background-color: white;
   border: 3px solid $dark-color;
 }
@@ -419,6 +434,7 @@ video {
   width: 100%;
   height: 75px;
   position: relative;
+  background-color: white;
 }
 
 #send-msg-form.ng-hide-add, #send-msg-form.ng-hide-remove {
