--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -513,28 +513,31 @@ video {
   width: 15px;
   height: 14px;
   margin: 0 10px;
-  border-radius: 3px;
-  background-color: #fff;
+  border-radius: 2px;
 
   display: inline-block;
-  animation: bouncedelay 1.4s infinite ease;
   /* Prevent first frame from flickering when animation starts */
-  animation-fill-mode: both;
 }
 
 .spinner .bounce1 {
+  animation: bouncedelay-blue 1.4s infinite ease;
+  animation-fill-mode: both;
   animation-delay: 1.8s;
 }
 
 .spinner .bounce2 {
+  animation: bouncedelay-purple 1.4s infinite ease;
+  animation-fill-mode: both;
   animation-delay: 2.1s;
 }
 
 .spinner .bounce3 {
+  animation: bouncedelay-orange 1.4s infinite ease;
+  animation-fill-mode: both;
   animation-delay: 2.4s;
 }
 
-@keyframes bouncedelay {
+@keyframes bouncedelay-blue {
   0%, 80%, 100% {
     transform: scale(0.2);
     background-color: #fff;
@@ -542,6 +545,30 @@ video {
 
   40% {
     transform: scale(1.0);
-    background-color: #aaa;
+    background-color: #24306e;
+  }
+}
+
+@keyframes bouncedelay-purple {
+  0%, 80%, 100% {
+    transform: scale(0.2);
+    background-color: #fff;
+  }
+
+  40% {
+    transform: scale(1.0);
+    background-color: #b698dc;
+  }
+}
+
+@keyframes bouncedelay-orange {
+  0%, 80%, 100% {
+    transform: scale(0.2);
+    background-color: #fff;
+  }
+
+  40% {
+    transform: scale(1.0);
+    background-color: #ff9f6e;
   }
 }
