--- a/app/jade/chat.jade
+++ b/app/jade/chat.jade
@@ -51,7 +51,7 @@ main(ng-controller="ChatCtrl", onbeforeunload="onbeforeunload", onblur="onblur",
       #landing-page(ng-hide="auth.isLoggedIn")
         #gradient
         #gradient-shadows
-        h1 Chat with a random person halfway around the world into the wee hours of the morning.
+        h1 Chat with a random person from around the world into the wee hours of the morning.
         h2 Sign in with Facebook, turn on<br>your webcam and microphone,<br>and meet new people!
           #fb-login-container(ng-click="auth.login()")
             #fb-login
