--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -237,14 +237,14 @@ video {
 }
 
 #chat-btns .btn .gradient {
-  background: rgb(20,33,86); /* Old browsers */
-  background: -moz-linear-gradient(left,  rgba(20,33,86,1) 0%, rgba(32,49,118,1) 17%, rgba(69,79,166,1) 27%, rgba(119,115,202,1) 37%, rgba(157,137,219,1) 49%, rgba(216,173,226,1) 59%, rgba(252,209,201,1) 77%, rgba(254,201,180,1) 89%, rgba(254,162,107,1) 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(20,33,86,1)), color-stop(17%,rgba(32,49,118,1)), color-stop(27%,rgba(69,79,166,1)), color-stop(37%,rgba(119,115,202,1)), color-stop(49%,rgba(157,137,219,1)), color-stop(59%,rgba(216,173,226,1)), color-stop(77%,rgba(252,209,201,1)), color-stop(89%,rgba(254,201,180,1)), color-stop(100%,rgba(254,162,107,1))); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(left,  rgba(20,33,86,1) 0%,rgba(32,49,118,1) 17%,rgba(69,79,166,1) 27%,rgba(119,115,202,1) 37%,rgba(157,137,219,1) 49%,rgba(216,173,226,1) 59%,rgba(252,209,201,1) 77%,rgba(254,201,180,1) 89%,rgba(254,162,107,1) 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(left,  rgba(20,33,86,1) 0%,rgba(32,49,118,1) 17%,rgba(69,79,166,1) 27%,rgba(119,115,202,1) 37%,rgba(157,137,219,1) 49%,rgba(216,173,226,1) 59%,rgba(252,209,201,1) 77%,rgba(254,201,180,1) 89%,rgba(254,162,107,1) 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(left,  rgba(20,33,86,1) 0%,rgba(32,49,118,1) 17%,rgba(69,79,166,1) 27%,rgba(119,115,202,1) 37%,rgba(157,137,219,1) 49%,rgba(216,173,226,1) 59%,rgba(252,209,201,1) 77%,rgba(254,201,180,1) 89%,rgba(254,162,107,1) 100%); /* IE10+ */
-  background: linear-gradient(to right,  rgba(20,33,86,1) 0%,rgba(32,49,118,1) 17%,rgba(69,79,166,1) 27%,rgba(119,115,202,1) 37%,rgba(157,137,219,1) 49%,rgba(216,173,226,1) 59%,rgba(252,209,201,1) 77%,rgba(254,201,180,1) 89%,rgba(254,162,107,1) 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#142156', endColorstr='#fea26b',GradientType=1 ); /* IE6-9 */
+  background: rgb(232,145,102); /* Old browsers */
+  background: -moz-linear-gradient(left,  rgba(232,145,102,1) 0%, rgba(246,207,192,1) 14%, rgba(246,215,210,1) 23%, rgba(215,183,221,1) 41%, rgba(166,151,211,1) 51%, rgba(135,132,194,1) 63%, rgba(84,92,162,1) 73%, rgba(47,61,117,1) 83%, rgba(41,49,99,1) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(232,145,102,1)), color-stop(14%,rgba(246,207,192,1)), color-stop(23%,rgba(246,215,210,1)), color-stop(41%,rgba(215,183,221,1)), color-stop(51%,rgba(166,151,211,1)), color-stop(63%,rgba(135,132,194,1)), color-stop(73%,rgba(84,92,162,1)), color-stop(83%,rgba(47,61,117,1)), color-stop(100%,rgba(41,49,99,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(left,  rgba(232,145,102,1) 0%,rgba(246,207,192,1) 14%,rgba(246,215,210,1) 23%,rgba(215,183,221,1) 41%,rgba(166,151,211,1) 51%,rgba(135,132,194,1) 63%,rgba(84,92,162,1) 73%,rgba(47,61,117,1) 83%,rgba(41,49,99,1) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(left,  rgba(232,145,102,1) 0%,rgba(246,207,192,1) 14%,rgba(246,215,210,1) 23%,rgba(215,183,221,1) 41%,rgba(166,151,211,1) 51%,rgba(135,132,194,1) 63%,rgba(84,92,162,1) 73%,rgba(47,61,117,1) 83%,rgba(41,49,99,1) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(left,  rgba(232,145,102,1) 0%,rgba(246,207,192,1) 14%,rgba(246,215,210,1) 23%,rgba(215,183,221,1) 41%,rgba(166,151,211,1) 51%,rgba(135,132,194,1) 63%,rgba(84,92,162,1) 73%,rgba(47,61,117,1) 83%,rgba(41,49,99,1) 100%); /* IE10+ */
+  background: linear-gradient(to right,  rgba(232,145,102,1) 0%,rgba(246,207,192,1) 14%,rgba(246,215,210,1) 23%,rgba(215,183,221,1) 41%,rgba(166,151,211,1) 51%,rgba(135,132,194,1) 63%,rgba(84,92,162,1) 73%,rgba(47,61,117,1) 83%,rgba(41,49,99,1) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e89166', endColorstr='#293163',GradientType=1 ); /* IE6-9 */
   opacity: 0;
   position: absolute;
   top: 0;
@@ -401,15 +401,14 @@ video {
   left: 0;
   height: 100%;
   width: 100%;
-  opacity: .96;
-  background: rgb(20,33,86); /* Old browsers */
-  background: -moz-linear-gradient(top,  rgba(27,38,97,1) 0%, rgba(32,49,118,1) 17%, rgba(69,79,166,1) 27%, rgba(119,115,202,1) 37%, rgba(157,137,219,1) 49%, rgba(216,173,226,1) 59%, rgba(252,209,201,1) 77%, rgba(254,201,180,1) 86%, rgba(254,132,71,1) 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(27,38,97,1)), color-stop(17%,rgba(32,49,118,1)), color-stop(27%,rgba(69,79,166,1)), color-stop(37%,rgba(119,115,202,1)), color-stop(49%,rgba(157,137,219,1)), color-stop(59%,rgba(216,173,226,1)), color-stop(77%,rgba(252,209,201,1)), color-stop(86%,rgba(254,201,180,1)), color-stop(100%,rgba(254,132,71,1))); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  rgba(27,38,97,1) 0%,rgba(32,49,118,1) 17%,rgba(69,79,166,1) 27%,rgba(119,115,202,1) 37%,rgba(157,137,219,1) 49%,rgba(216,173,226,1) 59%,rgba(252,209,201,1) 77%,rgba(254,201,180,1) 86%,rgba(254,132,71,1) 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  rgba(27,38,97,1) 0%,rgba(32,49,118,1) 17%,rgba(69,79,166,1) 27%,rgba(119,115,202,1) 37%,rgba(157,137,219,1) 49%,rgba(216,173,226,1) 59%,rgba(252,209,201,1) 77%,rgba(254,201,180,1) 86%,rgba(254,132,71,1) 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  rgba(27,38,97,1) 0%,rgba(32,49,118,1) 17%,rgba(69,79,166,1) 27%,rgba(119,115,202,1) 37%,rgba(157,137,219,1) 49%,rgba(216,173,226,1) 59%,rgba(252,209,201,1) 77%,rgba(254,201,180,1) 86%,rgba(254,132,71,1) 100%); /* IE10+ */
-  background: linear-gradient(to bottom,  rgba(27,38,97,1) 0%,rgba(32,49,118,1) 17%,rgba(69,79,166,1) 27%,rgba(119,115,202,1) 37%,rgba(157,137,219,1) 49%,rgba(216,173,226,1) 59%,rgba(252,209,201,1) 77%,rgba(254,201,180,1) 86%,rgba(254,132,71,1) 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#142156', endColorstr='#f99765',GradientType=0 ); /* IE6-9 */
+  background: rgb(41,49,99); /* Old browsers */
+  background: -moz-linear-gradient(top,  rgba(41,49,99,1) 0%, rgba(47,61,117,1) 17%, rgba(84,92,162,1) 27%, rgba(135,132,194,1) 37%, rgba(166,151,211,1) 49%, rgba(215,183,221,1) 59%, rgba(246,215,210,1) 77%, rgba(246,207,192,1) 86%, rgba(232,145,102,1) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(41,49,99,1)), color-stop(17%,rgba(47,61,117,1)), color-stop(27%,rgba(84,92,162,1)), color-stop(37%,rgba(135,132,194,1)), color-stop(49%,rgba(166,151,211,1)), color-stop(59%,rgba(215,183,221,1)), color-stop(77%,rgba(246,215,210,1)), color-stop(86%,rgba(246,207,192,1)), color-stop(100%,rgba(232,145,102,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(41,49,99,1) 0%,rgba(47,61,117,1) 17%,rgba(84,92,162,1) 27%,rgba(135,132,194,1) 37%,rgba(166,151,211,1) 49%,rgba(215,183,221,1) 59%,rgba(246,215,210,1) 77%,rgba(246,207,192,1) 86%,rgba(232,145,102,1) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(41,49,99,1) 0%,rgba(47,61,117,1) 17%,rgba(84,92,162,1) 27%,rgba(135,132,194,1) 37%,rgba(166,151,211,1) 49%,rgba(215,183,221,1) 59%,rgba(246,215,210,1) 77%,rgba(246,207,192,1) 86%,rgba(232,145,102,1) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(41,49,99,1) 0%,rgba(47,61,117,1) 17%,rgba(84,92,162,1) 27%,rgba(135,132,194,1) 37%,rgba(166,151,211,1) 49%,rgba(215,183,221,1) 59%,rgba(246,215,210,1) 77%,rgba(246,207,192,1) 86%,rgba(232,145,102,1) 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  rgba(41,49,99,1) 0%,rgba(47,61,117,1) 17%,rgba(84,92,162,1) 27%,rgba(135,132,194,1) 37%,rgba(166,151,211,1) 49%,rgba(215,183,221,1) 59%,rgba(246,215,210,1) 77%,rgba(246,207,192,1) 86%,rgba(232,145,102,1) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#293163', endColorstr='#e89166',GradientType=0 ); /* IE6-9 */
 }
 
 #gradient-shadows {
