Make gradient shadows size cover

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -422,7 +422,7 @@ video {
   height: 100%;
   width: 100%;
   background-image: url('/images/white_shadows.png');
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
   opacity: 0.4;
 }
