Change name to 6AM Chat

--- a/app/jade/chat.jade
+++ b/app/jade/chat.jade
@@ -12,7 +12,7 @@ main(ng-controller="ChatCtrl", onbeforeunload="onbeforeunload", onblur="onblur",
         #brand-container
           #brand
             .brand-side
-              span SUNRISE CHAT
+              span 6AM CHAT
 
         #btns
           #auth-btn
