--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -9,7 +9,7 @@ html.no-js
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
     title 6AM Chat
-    meta(name="description", content="")
+    meta(name="description", content="Meet random people from around the world and have late-night conversations using your webcam and mic.")
     meta(name="viewport", content="width=device-width")
     // build:css(.tmp) styles/main.css
     link(rel="stylesheet", href="styles/fonts.css")
