--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -37,16 +37,9 @@ html.no-js
 
     include chat
 
-    // Google Analytics: change UA-XXXXX-X to be your site's ID.
-    script.
-      var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-      (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-      g.src='//www.google-analytics.com/ga.js';
-      s.parentNode.insertBefore(g,s)}(document,'script'));
-
     script(src="bower_components/jquery/jquery.js")
     script(src="bower_components/angular/angular.js")
-    script(src="bower_components/angular-animate/angular-animate.js")
+    script(src="bower_components/angular-animate/angular-animate.min.js")
 
     // build:js(app) scripts/scripts.js
     script(src="scripts/app.js")
