--- a/app/jade/chat.jade
+++ b/app/jade/chat.jade
@@ -12,6 +12,8 @@ main(ng-controller="ChatCtrl", onbeforeunload="onbeforeunload", onblur="onblur",
         #brand-container
           #brand
             .brand-side
+              #beta-triangle
+                span#beta BETA
               span 6AM CHAT
 
         #btns
