--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -42,6 +42,7 @@ html.no-js
 
     // build:js(app) scripts/scripts.js
     script(src="scripts/app.js")
+    script(src="scripts/config.js")
     script(src="scripts/services/vline.js")
     script(src="scripts/services/video_chat.js")
     script(src="scripts/services/chat_queue.js")
