Add whitespace to beta ribbon

--- a/app/jade/chat.jade
+++ b/app/jade/chat.jade
@@ -12,7 +12,8 @@ main(ng-controller="ChatCtrl", onbeforeunload="onbeforeunload", onblur="onblur",
         #brand-container
           #brand
             .brand-side
-              #beta-triangle
+              #beta-whitespace
+              #beta-ribbon
                 span#beta BETA
               span 6AM CHAT
 
